[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version= "1.12.0", features = ["attributes"]}
chrono = "0.4.23"
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
sqlx = {version = "0.6.2", features = ["runtime-async-std-native-tls",    "macros", "chrono", "uuid", "json", "postgres"]}
thiserror = "1.0.38"
tide = "0.16.0"
uuid = {version = "1.2.2", features = ["serde"]}
